--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,11 @@ addons:
 matrix:
   include:
     - jdk: openjdk8
-      script: ./mvnw clean verify -Pjacoco
+      script: ./mvnw coveralls:report
+    - jdk: openjdk11
+      script: ./mvnw coveralls:report
+    - jdk: openjdk11
+      script: ./mvnw sonar:sonar 
     - jdk: openjdk11
       script: ./mvnw coveralls:report sonar:sonar 
     
