Try workaround for Coverall issue with java 11
Issue: https://github.com/trautonen/coveralls-maven-plugin/issues/141

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,17 @@
 					<groupId>org.eluder.coveralls</groupId>
 					<artifactId>coveralls-maven-plugin</artifactId>
 					<version>${coveralls.plugin.version}</version>
+					<!-- workaround for the java 11 issue -->
+					<configuration>
+						<failOnServiceError>false</failOnServiceError>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>javax.xml.bind</groupId>
+							<artifactId>jaxb-api</artifactId>
+							<version>2.3.1</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
