--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,7 @@
 			${project.reporting.outputDirectory}/jacoco/jacoco.xml
 		</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.tests>
-			${project.build.testSourceDirectory},
-			${basedir}/src/it/java
+			${project.build.testSourceDirectory}
 		</sonar.tests>
 		<sonar.coverage.exclusions>
 			**/model/*,
