--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ matrix:
   include:
     - jdk: openjdk8
       script: ./mvnw clean verify
+      after_script:
+        - bash ./notify_build.sh
     - jdk: openjdk11
       script: ./mvnw clean verify -Pjacoco && ./mvnw coveralls:report sonar:sonar 
+      after_script:
+        - bash ./notify_build.sh
     
