--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
 			<artifactId>testcontainers</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.webjars</groupId>
