Refactoring to exclude off-the-shelf components from code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@
 		<sonar.coverage.exclusions>
 			**/model/*,
 			**/*Application.*
+			**/ControlBusConfig.*
+			**/MqttMessageHandlerConfig.*
+			**/ChannelsConfig.*
 		</sonar.coverage.exclusions>
 	</properties>
 
@@ -241,6 +244,9 @@
 							<excludes>
 								<exclude>**/*Application.*</exclude>
 								<exclude>**/model/*</exclude>
+								<exclude>**/ControlBusConfig.*</exclude>
+								<exclude>**/MqttMessageHandlerConfig.*</exclude>					
+								<exclude>**/ChannelsConfig.*</exclude>
 							</excludes>
 						</configuration>
 						<executions>
