--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,12 @@ matrix:
   include:
     - jdk: openjdk8
       script: ./mvnw clean verify
-      after_script:
-        - bash ./notify_build.sh
+      after_script: bash ./notify_build.sh
+    - jdk: openjdk8
+      if: type IN (pull_request)
+      script: ./mvnw clean verify -Pmutation-tests
+      after_script: bash ./notify_build.sh
     - jdk: openjdk11
       script: ./mvnw clean verify -Pjacoco && ./mvnw coveralls:report sonar:sonar 
-      after_script:
-        - bash ./notify_build.sh
+      after_script: bash ./notify_build.sh
     
