Solving Sonarcloud Issues

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		<sonar.coverage.exclusions>
 			**/model/*,
 			**/*Application.*,
-			**/MqttControllerConfig.*
+			**/*Config.*
 		</sonar.coverage.exclusions>
 	</properties>
 
