--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,14 +1,17 @@
-{
-    "properties": [
-        {
-            "name": "spring.data.mongodb.topic_collection",
-            "type": "java.lang.String",
-            "description": "The 'Topic' Collection name"
-        },
-        {
-            "name": "broker",
-            "type": "java.lang.String",
-            "description": "the MQTT Broker URI"
-        }
-    ]
-}
+{"properties": [
+  {
+    "name": "spring.data.mongodb.topic_collection",
+    "type": "java.lang.String",
+    "description": "The 'Topic' Collection name"
+  },
+  {
+    "name": "broker",
+    "type": "java.lang.String",
+    "description": "the MQTT Broker URI"
+  },
+  {
+    "name": "mqtt.receiver.autostartup",
+    "type": "java.lang.String",
+    "description": "Allow manual activation of the mqtt_receiver bean"
+  }
+]}
