--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.database=telemetry_db
 spring.data.mongodb.topic_collection=topic
-broker=tcp://broker.emqx.io:1883
+broker=tcp://broker.hivemq.com:1883
 spring.main.allow-bean-definition-overriding=true
+mqtt.receiver.autostartup=true
